<resources>
    <string name="app_name">Wordie</string>
    <string name="AddNewWordActivityName">Add New Word</string>
    <string name="word_textView">Word</string>
    <string name="word_editText_hint">Enter a word…</string>
    <string name="posTextView">functional label</string>
    <string name="meaningTextView">Meaning</string>
    <string name="enter_the_meaning">Enter the meaning…</string>
    <string name="save_menu">Save</string>
    <string name="search">Search</string>
    <string name="search_hint">Search word…</string>
    <string name="text">request text</string>
    <string name="empty_list_view">empty list view</string>
    <string name="currently_you_have_no_words_in_your_list">Currently, you have no words in your list</string>
    <string name="actual_word_play_button">actual word play button</string>
    <string name="definition_textView_text">Definition :</string>
    <string name="please_check_spelling_or_enter_valid_word">Please check spelling or enter valid word</string>
    <string name="delete">Delete</string>
    <string name="sign_out">sign out</string>
    <string-array name="spinner_items">
        <item>Noun</item>
        <item>Verb</item>
        <item>Adjective</item>
        <item>Adverb</item>
    </string-array>
</resources>
