<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activityLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddNewWordActivity">

    <TextView
        android:id="@+id/wordTextView"
        style="@style/word_textview_style"
        android:text="@string/word_textView"
        app:layout_constraintBaseline_toBaselineOf="@+id/wordEditText"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/wordEditText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="48dp"
        android:autofillHints=""
        android:hint="@string/word_editText_hint"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toEndOf="@+id/wordTextView"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/posTextView"
        style="@style/pos_textView_style"
        android:text="@string/posTextView"
        app:layout_constraintBottom_toTopOf="@+id/meaningTextView"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/wordTextView"
        app:layout_constraintVertical_bias="0.284" />

    <androidx.appcompat.widget.AppCompatSpinner
        android:id="@+id/posSpinner"
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:layout_marginTop="104dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.264"
        app:layout_constraintStart_toEndOf="@+id/posTextView"
        app:layout_constraintTop_toBottomOf="@+id/wordEditText"
        tools:listitem="@android:layout/simple_spinner_item" />

    <TextView
        android:id="@+id/meaningTextView"
        android:text="@string/meaningTextView"
        style="@style/meaning_textView_style"
        app:layout_constraintBaseline_toBaselineOf="@+id/meaningEditText"
        app:layout_constraintLeft_toLeftOf="parent" />

    <EditText
        android:id="@+id/meaningEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:gravity="start|top"
        android:inputType="textLongMessage"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.354"
        app:layout_constraintStart_toEndOf="@+id/meaningTextView"
        app:layout_constraintTop_toBottomOf="@+id/posSpinner"
        app:layout_constraintVertical_bias="0.385"
        android:hint="@string/enter_the_meaning"
        android:autofillHints="@string/enter_the_meaning" />

</androidx.constraintlayout.widget.ConstraintLayout>